stable fix to overlapping profile bug

--- a/css/home.css
+++ b/css/home.css
@@ -53,13 +53,12 @@ a {
     position: relative;
     z-index: 1;
     overflow: hidden;
-    /* background-color: rgba(165, 42, 42, 0.226); */
 
 }
 
 .flex-container .navbar {
     height: 100%;
-    width: 80px;
+    min-width: 80px;
     padding: 5px;
     align-self: center;
     justify-self: flex-start;
@@ -80,26 +79,25 @@ a {
 
 
 
-
-
-.flex-container .profile div {
-margin: 20px;
-padding: 10px;
-}
-
-
 .flex-container .profile {
-   
+
     width: 100%;
     height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     position: relative;
-     
+
 }
 
 
+
+.flex-container .profile div {
+    position: absolute;
+    margin: auto;
+    max-width: 100%;
+    background-color: rgba(15, 15, 15, 0.103);
+}
 
 
 
@@ -271,9 +269,8 @@ button {
 
     position: relative;
     width: 320px;
-    margin: 150px auto;
-    perspective: 2000px;
-    /* overflow: hidden; */
+    margin: 200px auto;
+    perspective: 3000px;
 }
 
 
@@ -292,7 +289,6 @@ button {
     position: absolute;
     top: 15px;
     left: 10px;
-    /* width: 300px; */
     height: 200px;
     width: 100px;
 }
@@ -300,12 +296,8 @@ button {
 
 
 .single-img img {
-
-    /* width: 300px; */
-    width: 200px;
+    width: 100px;
     height: 200px;
-    /* border: 5px solid #fff; */
-
 }
 
 
@@ -318,7 +310,7 @@ button {
 
 .single-img.automation {
 
-    transform: rotateY(1deg) translateZ(300px);
+    transform: rotateY(355deg) translateZ(300px);
 
 }
 
